# arlang

./: CMakeLists.txt  design.txt  target.arl
genxt/: README.md
libstd/io/: print.arl
runtime/: start.arl  start.c  start.h
src/: arlang.cxx  cmdline.cxx  cmdline.hxx
src/core/: log.h
src/lexer/: lexical_analyzer.cxx  lexical_analyzer.hxx  lexical_def.hxx  spliter.cxx  spliter.hxx  token_check.cxx  token_check.hxx  token_check2.cxx  token_grouper.cxx  token_word.cxx  token_word.hxx  token_word2.cxx
